[package]
name = "pcrust"
version = "0.1.0"
authors = ["Richard Brooks <richardbrooks2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = { path="../../solana/client" }
solana-sdk = { path="../../solana/sdk" }
solana-program = { path="../../solana/sdk/program" }
