[package]
name = "pyth-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
pyth-util = { path = "util" }
pyth-bindgen = { path = "bindgen" }

[dependencies]
pyth-util = { path = "util" }
solana-sdk = "1.9.0"
solana-client = "1.9.0"
borsh = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
