[package]
name = "remote-governor"
version = "0.1.0"
description = "Pyth to Wormhole solana on-chain integration"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyth2wormhole"

[features]
default = ["wormhole-bridge-solana/no-entrypoint"]
client = ["solitaire/client", "no-entrypoint"]
trace = ["solitaire/trace", "wormhole-bridge-solana/trace"]
no-entrypoint = []

[dependencies]
wormhole-bridge-solana = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.8.9" }
solitaire = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.8.9"}
rocksalt = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.8.9"}
solana-program = "=1.10.31"
crossbeam-epoch = "=0.9.5"
borsh = "=0.9.3"
pyth-client = "0.2.2"
serde = { version = "1", optional = true}
serde_derive = { version = "1", optional = true}
serde_json = { version = "1", optional = true}
