[package]
name = "pyth-oracle"
version = "2.26.0"
edition = "2021"
license = "Apache 2.0"
publish = false

[build-dependencies]
bindgen = "0.60.1"

[dependencies]
solana-program = "=1.13.3"
bytemuck = "1.11.0"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }
pythnet-sdk = { git = "https://github.com/pyth-network/pyth-crosschain", rev="60144002053a93f424be70decd8a8ccb8d618d81"}

[dev-dependencies]
solana-program-test = "=1.13.3"
solana-sdk = "=1.13.3"
tokio = "1.14.1"
hex = "0.3.1"
quickcheck = "1"
rand = "0.8.5"
quickcheck_macros = "1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
pythnet-sdk = { git = "https://github.com/pyth-network/pyth-crosschain", rev="60144002053a93f424be70decd8a8ccb8d618d81", features = ["quickcheck"]}
serde_json = "1.0"
test-generator = "0.3.1"
csv = "1.1"
lazy_static = "1.4.0"

# IMPORTANT: Features which affect oracle business logic must be added
# to the `lazy_static` macro call in `pyth_simulator.rs`.
#
# Context: We perform a cargo-build-bpf call as part of running tests
# to obtain a BPF binary for testing. Desired features are not known
# to cargo-build-bpf at that point - we manually capture them at
# compile-time and pass on to the child process.
[features]
check = [] # Skips make build in build.rs, use with cargo-clippy and cargo-check
debug = []
library = []
pythnet = [] # logic-affecting features start with this one

[lib]
crate-type = ["cdylib", "lib"]
