[package]
name = "pyth-oracle"
version = "2.34.0"
edition = "2021"
license = "Apache 2.0"
publish = false

[build-dependencies]
bindgen = "0.60.1"

[dependencies]
solana-program = "=1.14.17"
bytemuck = "1.11.0"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }
pythnet-sdk = "2.2.0"
solana-sdk = { version = "=1.14.17", optional = true }
bitflags = { version = "2.6.0", features = ["bytemuck"] }

[dev-dependencies]
solana-program-test = "=1.14.17"
solana-sdk = "=1.14.17"
tokio = "1.14.1"
hex = "0.3.1"
quickcheck = "1"
rand = "0.8.5"
quickcheck_macros = "1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
pythnet-sdk = { version = "2.2.0" , features = ["quickcheck"]}
serde_json = "1.0"
test-generator = "0.3.1"
csv = "1.1"

# Downgrade to be compatible with Rust 1.60
tracing-subscriber = "=0.3.0"
time-macros = "=0.2.3"
time = "=0.3.7"

[features]
check = [] # Skips make build in build.rs, use with cargo-clippy and cargo-check
debug = []
library = ["solana-sdk"]

[lib]
crate-type = ["cdylib", "lib"]
